--- a/src/components/BoxSearch/BoxSearch.css
+++ b/src/components/BoxSearch/BoxSearch.css
@@ -1,6 +1,7 @@
 .BoxSearch {
   display: flex;
   gap: 0.75rem;
+  width: 100%;
 }
 
 .Search {
@@ -14,6 +15,7 @@
   background-color: transparent;
   border: none;
   outline: none;
+  width: 15rem;
 }
 
 .s-icon {
