--- a/src/components/PlayersCard/PlayersCard.css
+++ b/src/components/PlayersCard/PlayersCard.css
@@ -1,27 +1,38 @@
-.PlayersCard {
+.players-card {
   width: 100%;
   border-radius: 0.7rem;
-  gap: 1rem;
+  /*gap: 1rem;*/
   display: flex;
   flex-direction: column;
   font-size: 13px;
+  overflow-y: scroll;
+  height: 300px ;
 }
 
-.Gamer {
+.gamer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0.5rem;
+  transition: all 100ms ease-out;
 }
 
-.Gamer > div {
+.gamer > div {
   display: flex;
   gap: 10px;
 }
 
-.GamerImg {
+.gamer-image {
   width: 3.2em;
   height: 3.2em;
   border-radius: 50%;
+}
+
+.gamer:hover {
+  background: #80808038;
+  padding: 5px;
+  border: 2px solid var(--orange);
+  cursor: pointer;
 }
 
 .name {
@@ -39,4 +50,32 @@
   height: 2rem;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.pc-button:hover {
+  background: white;
+}
+
+.online-dot {
+  background-color: greenyellow;
+  border-radius: 50%;
+  position: absolute;
+  left: 2rem;
+  width: 1rem;
+  height: 1rem;
+}
+
+.btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.players-card > div {
+  position: relative;
+}
+
+.players-card > hr {
+  width: 85%;
+  border: 0.1px solid #ececec;
 }
