--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,12 @@
   background: transparent;
   border: 2px solid var(--orange);
 }
+
+.button:disabled {
+  background: silver;
+  pointer-events: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
