--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,13 +12,13 @@
   --video: #4a4eb7;
   --location: #ef5757;
   --shedule: #e1ae4a;
+  box-sizing: border-box;
 }
 
 .App {
   overflow: hidden;
   color: var(--black);
   background: #f3f3f3;
-  padding: 1rem 1rem;
 }
 
 .blur {
