--- a/client/src/components/BoxSearch/BoxSearch.css
+++ b/client/src/components/BoxSearch/BoxSearch.css
@@ -8,26 +8,25 @@
   display: flex;
   background-color: var(--inputColor);
   border-radius: 10px;
-  padding: 5px;
+  padding: 4px;
+  width: 100%;
 }
 
 .Search > input {
   background-color: transparent;
   border: none;
   outline: none;
-  width: 15rem;
 }
 
 .s-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(106.23deg, #f99827, #f95f35 100%);
-  border-radius: 5px;
   padding: 4px;
-  color: white;
+  color:#888;
+  opacity: 0.5;
 }
 
-.s-icon:hover {
-  cursor: pointer;
+input::-webkit-input-placeholder {
+  color: #888; /* Para Chrome, Safari, Edge */
 }
