--- a/client/src/components/GameBoard/GameBoard.css
+++ b/client/src/components/GameBoard/GameBoard.css
@@ -1,7 +1,9 @@
 .GameBoard {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /*height: 100vh;*/
+  align-items: center;
+  justify-content: center;
   overflow: auto;
   gap: 1rem;
 }
